src/navigation/SideNavigation.css
/**
 * Copyright 2020 Antoine Orgerit. All rights reserved.
 * Use of this source code is governed by a BSD-style
 * license that can be found in the LICENSE file.
 */

/* general container style */

#side-navigation-container {
    position: absolute;
    z-index: 1;
    background-color: #141414;
    top: 64px;
    height: calc(100% - 64px);
}

/* trigger button style */

#side-navigation-container .ant-layout-sider-zero-width-trigger {
    position: absolute;
    top: -53px;
    left: 11px;
    width: 42px;
    background-color: transparent;
    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
}

@media all and (min-width: 877px) {
    #side-navigation-container .ant-layout-sider-zero-width-trigger {
        display: none;
    }
}

#side-navigation-container:not(.collapsed) .ant-layout-sider-zero-width-trigger {
    color: #B9A563;
}

/* updating content accessibility on visible menu */

#side-navigation-container:not(.collapsed)+.ant-layout-content {
    opacity: 0.5;
    pointer-events: none;
    user-select: none;
    overflow: hidden;
}

/* general menu and menu item style */

#side-navigation-container .ant-layout-sider-collapsed .ant-menu-inline-collapsed {
    width: inherit;
}

#side-navigation-container .ant-layout-sider-collapsed .ant-menu-inline-collapsed .ant-menu-item {
    padding: 0 16px !important;
}

#side-navigation-container .ant-layout-sider-children>ul {
    border: none;
}

#side-navigation-container .ant-layout-sider-children .ant-menu-item {
    margin: 8px 0;
}

#side-navigation-container .ant-layout-sider-children .ant-menu-item.ant-menu-item-selected {
    background-color: transparent;
}

#side-navigation-container .ant-layout-sider-children .ant-menu-item-divider {
    margin: 3px 0;
    background-color: rgba(185, 165, 99, 0.25);
}

#side-navigation-container .ant-layout-sider-children .ant-menu-item, #side-navigation-container .ant-layout-sider-children .ant-menu-item * {
    text-transform: uppercase;
    letter-spacing: 1.3pt;
    font-weight: 500;
}

/* styling language selection menu item */

#side-navigation-container .side-navigation-language-selection-container {
    cursor: default;
}

#side-navigation-container .side-navigation-language-selection-container #language-selection-dropdown-btn span[role="img"] {
    margin-right: 0;
}

